--- a/index.html
+++ b/index.html
@@ -110,14 +110,16 @@
 <script type="importmap">
 {
   "imports": {
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
+    "vite": "https://aistudiocdn.com/vite@^7.2.6",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
     "recharts": "https://aistudiocdn.com/recharts@^3.5.1",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
+    "react/": "https://aistudiocdn.com/react@^19.2.0/",
+    "react": "https://aistudiocdn.com/react@^19.2.0",
     "xlsx": "https://aistudiocdn.com/xlsx@^0.18.5",
-    "papaparse": "https://aistudiocdn.com/papaparse@^5.5.3",
-    "fuse.js": "https://aistudiocdn.com/fuse.js@^7.1.0"
+    "fuse.js": "https://aistudiocdn.com/fuse.js@^7.1.0",
+    "papaparse": "https://aistudiocdn.com/papaparse@^5.5.3"
   }
 }
 </script>
@@ -126,5 +128,6 @@
     <div class="bg-cinematic"></div>
     <div class="bg-noise"></div>
     <div id="root"></div>
+    <script type="module" src="/src/index.tsx"></script>
 </body>
 </html>
