--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Cine · Catálogo de Películas</title>
-    <!-- Tailwind via CDN for simplicity (works with Vite) -->
+    <!-- Tailwind via CDN configuration -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
