--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Cine · Catálogo de Películas</title>
-    <!-- Tailwind via CDN configuration -->
+    <!-- Tailwind via CDN is okay for simple setup, but we also have PostCSS config now -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -31,16 +31,16 @@
 <script type="importmap">
 {
   "imports": {
+    "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "papaparse": "https://aistudiocdn.com/papaparse@^5.5.3",
-    "xlsx": "https://aistudiocdn.com/xlsx@^0.18.5",
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
-    "fuse.js": "https://aistudiocdn.com/fuse.js@^7.1.0",
     "recharts": "https://aistudiocdn.com/recharts@^3.5.1",
     "vite": "https://aistudiocdn.com/vite@^7.2.6",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1"
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
+    "xlsx": "https://aistudiocdn.com/xlsx@^0.18.5",
+    "fuse.js": "https://aistudiocdn.com/fuse.js@^7.1.0"
   }
 }
 </script>
@@ -49,7 +49,7 @@
     <div class="bg-cinematic"></div>
     <div class="bg-noise"></div>
     <div id="root"></div>
-    <!-- Point to src/main.tsx explicitly -->
+    <!-- CRITICAL: Must point to /src/main.tsx for Vite build -->
     <script type="module" src="/src/main.tsx"></script>
 </body>
 </html>
