--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
     "vite": "https://aistudiocdn.com/vite@^7.2.6",
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
     "xlsx": "https://aistudiocdn.com/xlsx@^0.18.5",
-    "fuse.js": "https://aistudiocdn.com/fuse.js@^7.1.0"
+    "fuse.js": "https://aistudiocdn.com/fuse.js@^7.1.0",
+    "@google/genai": "https://esm.sh/@google/genai@^1.41.0"
   }
 }
 </script>
